--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h5>Loading...</h5>
     <script>
       require('./renderer.js');
+      document.write(window.preloadWasRun || 'preload was not run');
     </script>
   </body>
 </html>
